[package]
name = "conan-wrapper"
version = "0.1.0"
authors = ["akemimadoka <chino@hotococoa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.3"
which = "3.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
maplit = "1.0.2"
