[package]
name = "conan-wrapper"
version = "0.1.0"
authors = ["akemimadoka <chino@hotococoa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
which = "4.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
maplit = "1.0.2"

[features]
default = ["cargo"]
cargo = []
